log
Wed, Apr 16, 2025  8:59:06 AM: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (Pair*)calloc(capacity,sizeof(Pair*));
                  ^
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  8:59:42 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d3b9bd1
Wed, Apr 16, 2025  9:39:31 AM: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
 tests:  0|0
0bba591
Wed, Apr 16, 2025  9:44:10 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
7bca441
Wed, Apr 16, 2025  9:57:56 AM: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:102:5: error: 'pos' undeclared (first use in this function)
     pos = hash(key,map->capacity);
     ^~~
hashmap.c:102:5: note: each undeclared identifier is reported only once for each function it appears in
a6afe6a
Wed, Apr 16, 2025  9:58:08 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
953633c
Wed, Apr 16, 2025 10:01:26 AM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|0
   [ INFO ] buscando elemento con key=key
b48b230
Wed, Apr 16, 2025 10:05:38 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|3
total_score: 40/70
e777a00
Wed, Apr 16, 2025 10:14:34 AM: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:89:13: error: 'size' undeclared (first use in this function)
             size--;
             ^~~~
hashmap.c:89:13: note: each undeclared identifier is reported only once for each function it appears in
92c8b93
Wed, Apr 16, 2025 10:14:54 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
   [ INFO ] se elimina dato con key=olla
26e06f5
Wed, Apr 16, 2025 10:15:41 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
   [ INFO ] se intenta eliminar el mismo dato
a977eb1
Wed, Apr 16, 2025 10:18:58 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
17df3e3
Wed, Apr 16, 2025 10:45:03 AM: 
 hashmap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
64f0cc9
Fri, Apr 18, 2025  4:01:54 PM: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:75:56: error: 'Capacity' undeclared (first use in this function)
     Pair newBucket = (Pair ) malloc(sizeof( (Pair *) * Capacity));
                                                        ^~~~~~~~
hashmap.c:75:56: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:81:29: error: subscripted value is neither array nor pointer nor vector
             while (newBucket[index] != NULL) {
                             ^
hashmap.c:84:22: error: subscripted value is neither array nor pointer nor vector
             newBucket[index] = createPair(current->key, current->value);
                      ^
hashmap.c:88:20: error: 'newBuck' undeclared (first use in this function)
     map->buckets = newBuck;
                    ^~~~~~~
hashmap.c:90:1: error: stray '\302' in program
     
 ^
hashmap.c:90:2: error: stray '\240' in program
     
  ^
hashmap.c:90:3: error: stray '\302' in program
     
   ^
hashmap.c:90:4: error: stray '\240' in program
     
    ^
hashmap.c:90:5: error: stray '\302' in program
     
     ^
hashmap.c:90:6: error: stray '\240' in program
     
      ^
hashmap.c:90:7: error: stray '\302' in program
     
       ^
hashmap.c:90:8: error: stray '\240' in program
     
        ^
hashmap.c:75:10: error: variable 'newBucket' set but not used [-Werror=unused-but-set-variable]
     Pair newBucket = (Pair ) malloc(sizeof( (Pair *) * Capacity));
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
8c79868
Fri, Apr 18, 2025  4:02:09 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:75:56: error: 'Capacity' undeclared (first use in this function)
     Pair newBucket = (Pair ) malloc(sizeof( (Pair *) * Capacity));
                                                        ^~~~~~~~
hashmap.c:75:56: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:81:29: error: subscripted value is neither array nor pointer nor vector
             while (newBucket[index] != NULL) {
                             ^
hashmap.c:84:22: error: subscripted value is neither array nor pointer nor vector
             newBucket[index] = createPair(current->key, current->value);
                      ^
hashmap.c:88:20: error: 'newBuck' undeclared (first use in this function)
     map->buckets = newBuck;
                    ^~~~~~~
hashmap.c:75:10: error: variable 'newBucket' set but not used [-Werror=unused-but-set-variable]
     Pair newBucket = (Pair ) malloc(sizeof( (Pair *) * Capacity));
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
58410d5
